Added first work on employee dashboard
